последние большие правки
Изменил блок города

--- a/src/html/business-model.html
+++ b/src/html/business-model.html
@@ -3,7 +3,7 @@
     <h2 class="title business-model__title">
       бизнес-модель успешно&nbsp;проверена
       <span class="business-model__title-offset text_green">
-        в 4 городах России
+        в 12 городах России
       </span>
     </h2>
   </div>
@@ -641,7 +641,7 @@
       <div class="business-model__track">
         <div
           class="business-model__slider-photo business-model__slider-photo_active"
-          id="businessModel__sliderPhoto-0"
+          id="modelSlide-0"
         >
           <img
             src="@images/business-model/business-model_0.jpg"
@@ -649,30 +649,21 @@
             class="business-model__slider-photo-img"
           />
         </div>
-        <div
-          class="business-model__slider-photo"
-          id="businessModel__sliderPhoto-1"
-        >
+        <div class="business-model__slider-photo" id="modelSlide-1">
           <img
             src="@images/business-model/business-model_1.jpg"
             alt=""
             class="business-model__slider-photo-img"
           />
         </div>
-        <div
-          class="business-model__slider-photo"
-          id="businessModel__sliderPhoto-2"
-        >
+        <div class="business-model__slider-photo" id="modelSlide-2">
           <img
             src="@images/business-model/business-model_2.jpg"
             alt=""
             class="business-model__slider-photo-img"
           />
         </div>
-        <div
-          class="business-model__slider-photo"
-          id="businessModel__sliderPhoto-3"
-        >
+        <div class="business-model__slider-photo" id="modelSlide-3">
           <img
             src="@images/business-model/business-model_3.jpg"
             alt=""
@@ -684,7 +675,7 @@
       <div class="business-model__track business-model__track-slider">
         <div
           class="business-model__slider-photo business-model__slider-photo_active"
-          id="businessModel__sliderPhoto-0"
+          id="modelSlide-0"
         >
           <img
             src="@images/business-model/business-model_0.jpg"
@@ -692,30 +683,21 @@
             class="business-model__slider-photo-img"
           />
         </div>
-        <div
-          class="business-model__slider-photo"
-          id="businessModel__sliderPhoto-1"
-        >
+        <div class="business-model__slider-photo" id="modelSlide-1">
           <img
             src="@images/business-model/business-model_1.jpg"
             alt=""
             class="business-model__slider-photo-img"
           />
         </div>
-        <div
-          class="business-model__slider-photo"
-          id="businessModel__sliderPhoto-2"
-        >
+        <div class="business-model__slider-photo" id="modelSlide-2">
           <img
             src="@images/business-model/business-model_2.jpg"
             alt=""
             class="business-model__slider-photo-img"
           />
         </div>
-        <div
-          class="business-model__slider-photo"
-          id="businessModel__sliderPhoto-3"
-        >
+        <div class="business-model__slider-photo" id="modelSlide-3">
           <img
             src="@images/business-model/business-model_3.jpg"
             alt=""
@@ -779,7 +761,7 @@
           <span class="business-model__progress-bar-el">сентябрь, 2022</span>
         </ul>
         <div class="business-model__progress-bar-wrap">
-          <div class="business-model__progress-bar-toddler"></div>
+          <div class="modelProgressBarToddler"></div>
           <svg
             width="1380"
             height="14"
