--- a/src/html/cities.html
+++ b/src/html/cities.html
@@ -1,280 +1,5 @@
 <section class="cities">
   <div class="container cities__container">
-    <div class="cities__markers">
-      <div class="cities__marker" id="cities__marker-0">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Тверь</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-1">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Белгород</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-2">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Орел</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-3">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Воронеж</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-4">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Иваново</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-5">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Владимир</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-6">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Старый Оскол</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-7">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Пенза</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-8">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Нижний Новгород</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-9">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Ярославль</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-10">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Псков</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-11">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Вологда</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-12">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Череповец</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-13">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Великий Новгород</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-14">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Рязань</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-      <div class="cities__marker" id="cities__marker-15">
-        <div class="cities__marker-block-text">
-          <span class="cities__marker-num">Старый Оскол</span>
-        </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="15"
-          height="9"
-          viewBox="0 0 15 9"
-          fill="none"
-        >
-          <path
-            d="M7.5 9L0.138783 5.20717e-07L14.8612 1.80779e-06L7.5 9Z"
-            fill="white"
-          />
-        </svg>
-      </div>
-    </div>
-
     <div class="cities__content-block">
       <div class="cities__text-wrap">
         <h2 class="title cities__title">
@@ -292,39 +17,73 @@
         </p>
       </div>
 
+      <ul class="cities__legend-block">
+        <li class="cities__legend-el">
+          <img
+            src="@images/cities/cities_legend-icon.svg"
+            alt=""
+            class="cities__legend-el-icon"
+          />
+          <span class="cities__legend-el-text">
+            Города, где уже открыта франшиза
+          </span>
+        </li>
+        <li class="cities__legend-el">
+          <img
+            src="@images/cities/cities_legend-icon-1.svg"
+            alt=""
+            class="cities__legend-el-icon"
+          />
+          <span class="cities__legend-el-text">
+            Города для запуска франшизы
+          </span>
+        </li>
+      </ul>
+
       <div class="splide cities__splideSlider">
         <div class="splide__track">
           <ul class="splide__list cities__slider-list">
             <li class="splide__slide cities__slider-el">
               <div class="cities__el">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">Тверь</span>
+                  <span class="cities__el-title">Псков</span>
                   <span class="cities__el-num">№1</span>
                 </div>
                 <img
-                  src="@images/cities/city-0.png"
+                  src="@images/cities/city-0.jpg"
                   alt=""
                   class="cities__el-img"
                 />
               </div>
               <div class="cities__el">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">Белгород</span>
+                  <span class="cities__el-title">Великий Новгород</span>
                   <span class="cities__el-num">№2</span>
                 </div>
                 <img
-                  src="@images/cities/city-1.png"
+                  src="@images/cities/city-1.jpg"
                   alt=""
                   class="cities__el-img"
                 />
               </div>
               <div class="cities__el">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">Орел</span>
+                  <span class="cities__el-title">Череповец</span>
                   <span class="cities__el-num">№3</span>
                 </div>
                 <img
-                  src="@images/cities/city-2.png"
+                  src="@images/cities/city-2.jpg"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
+              <div class="cities__el">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Вологда</span>
+                  <span class="cities__el-num">№4</span>
+                </div>
+                <img
+                  src="@images/cities/city-3.jpg"
                   alt=""
                   class="cities__el-img"
                 />
@@ -333,22 +92,11 @@
             <li class="splide__slide cities__slider-el">
               <div class="cities__el">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">Воронеж</span>
-                  <span class="cities__el-num">№4</span>
-                </div>
-                <img
-                  src="@images/cities/city-3.png"
-                  alt=""
-                  class="cities__el-img"
-                />
-              </div>
-              <div class="cities__el">
-                <div class="cities__el-block">
                   <span class="cities__el-title">Иваново</span>
                   <span class="cities__el-num">№5</span>
                 </div>
                 <img
-                  src="@images/cities/city-4.png"
+                  src="@images/cities/city-4.jpg"
                   alt=""
                   class="cities__el-img"
                 />
@@ -359,20 +107,7 @@
                   <span class="cities__el-num">№6</span>
                 </div>
                 <img
-                  src="@images/cities/city-5.png"
-                  alt=""
-                  class="cities__el-img"
-                />
-              </div>
-            </li>
-            <li class="splide__slide cities__slider-el">
-              <div class="cities__el">
-                <div class="cities__el-block">
-                  <span class="cities__el-title">Тамбов</span>
-                  <span class="cities__el-num">№7</span>
-                </div>
-                <img
-                  src="@images/cities/city-6.png"
+                  src="@images/cities/city-5.jpg"
                   alt=""
                   class="cities__el-img"
                 />
@@ -380,59 +115,68 @@
               <div class="cities__el" id="cities__el-7">
                 <div class="cities__el-block">
                   <span class="cities__el-title">Пенза</span>
-                  <span class="cities__el-num">№8</span>
+                  <span class="cities__el-num">№7</span>
                 </div>
                 <img
-                  src="@images/cities/city-7.png"
+                  src="@images/cities/city-6.jpg"
                   alt=""
                   class="cities__el-img"
                 />
               </div>
-              <div class="cities__el" id="cities__el-8">
+              <div class="cities__el">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">
-                    Нижний<br />
-                    Новгород
-                  </span>
-                  <span class="cities__el-num">№9</span>
+                  <span class="cities__el-title">Тамбов</span>
+                  <span class="cities__el-num">№8</span>
                 </div>
                 <img
-                  src="@images/cities/city-8.png"
+                  src="@images/cities/city-7.jpg"
                   alt=""
                   class="cities__el-img"
                 />
               </div>
             </li>
+
             <li class="splide__slide cities__slider-el">
+              <div class="cities__el" id="cities__el-8">
+                <div class="cities__el-block">
+                  <span class="cities__el-title">Воронеж</span>
+                  <span class="cities__el-num">№9</span>
+                </div>
+                <img
+                  src="@images/cities/city-8.jpg"
+                  alt=""
+                  class="cities__el-img"
+                />
+              </div>
               <div class="cities__el" id="cities__el-9">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">Ярославль</span>
+                  <span class="cities__el-title">Старый Оскол</span>
                   <span class="cities__el-num">№10</span>
                 </div>
                 <img
-                  src="@images/cities/city-9.png"
+                  src="@images/cities/city-9.jpg"
                   alt=""
                   class="cities__el-img"
                 />
               </div>
               <div class="cities__el" id="cities__el-10">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">Псков</span>
+                  <span class="cities__el-title">Нижний Новгород</span>
                   <span class="cities__el-num">№11</span>
                 </div>
                 <img
-                  src="@images/cities/city-10.png"
+                  src="@images/cities/city-10.jpg"
                   alt=""
                   class="cities__el-img"
                 />
               </div>
               <div class="cities__el" id="cities__el-11">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">Вологда</span>
+                  <span class="cities__el-title">Орел</span>
                   <span class="cities__el-num">№12</span>
                 </div>
                 <img
-                  src="@images/cities/city-11.png"
+                  src="@images/cities/city-11.jpg"
                   alt=""
                   class="cities__el-img"
                 />
@@ -441,46 +185,44 @@
             <li class="splide__slide cities__slider-el">
               <div class="cities__el" id="cities__el-12">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">Череповец</span>
+                  <span class="cities__el-title">Ульяновск</span>
                   <span class="cities__el-num">№13</span>
                 </div>
                 <img
-                  src="@images/cities/city-12.png"
+                  src="@images/cities/city-12.jpg"
                   alt=""
                   class="cities__el-img"
                 />
               </div>
               <div class="cities__el" id="cities__el-13">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">Великий Новгород</span>
+                  <span class="cities__el-title">Самара </span>
                   <span class="cities__el-num">№14</span>
                 </div>
                 <img
-                  src="@images/cities/city-13.png"
+                  src="@images/cities/city-13.jpg"
                   alt=""
                   class="cities__el-img"
                 />
               </div>
               <div class="cities__el">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">Рязань</span>
+                  <span class="cities__el-title">Саранск </span>
                   <span class="cities__el-num">№15</span>
                 </div>
                 <img
-                  src="@images/cities/city-14.png"
+                  src="@images/cities/city-14.jpg"
                   alt=""
                   class="cities__el-img"
                 />
               </div>
-            </li>
-            <li class="splide__slide cities__slider-el">
               <div class="cities__el">
                 <div class="cities__el-block">
-                  <span class="cities__el-title">Старый<br />Оскол</span>
+                  <span class="cities__el-title">Кострома</span>
                   <span class="cities__el-num">№16</span>
                 </div>
                 <img
-                  src="@images/cities/city-15.png"
+                  src="@images/cities/city-15.jpg"
                   alt=""
                   class="cities__el-img"
                 />
