--- a/src/html/demand.html
+++ b/src/html/demand.html
@@ -56,8 +56,8 @@
           <button
             class="demand__video-block-btn video-block__btn"
             type="button"
-            href="https://www.youtube.com/embed/DzR7puuVVFE"
-            data-fancybox="galery"
+            data-fancybox
+            data-src="https://www.youtube.com/embed/DzR7puuVVFE"
           >
             <img src="@images/demand/bg__btn-play.svg" alt="" class="" />
           </button>
