--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./style/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="./style/fancybox.min.css" />
     <link rel="stylesheet" href="./style/splide.min.css" />
     <link rel="stylesheet" href="./style.min.css" />
     <title>
@@ -288,14 +288,13 @@
 
     <script src="./js/jquery.min.js"></script>
     <script src="./js/jquery.inputmask.min.js"></script>
-    <script src="./js/jquery.liMarquee.min.js"></script>
-    <script src="./js/jquery.fancybox.min.js"></script>
+    <script src="./js/fancybox.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/splide.min.js"></script>
     <script src="./js/splide-extension-auto-scroll.min.js"></script>
     <script src="./formprocessor.js"></script>
-    <script src="./js/app.min.js"></script>
     <script src="./js/sliderBenefit.js"></script>
+    <script src="./js/app.min.js"></script>
     <script
       type="text/javascript"
       src="https://api-maps.yandex.ru/2.1/?apikey=c3472711-0044-40b4-92fe-e8200d2156a0&load=package.map&lang=ru-RU&ver=2."
